Fix activity feed text alignment and clean up stylesheet
Corrected color palette and removed unused/redundant CSS rules.

--- a/resources/css/github-activity.css
+++ b/resources/css/github-activity.css
@@ -1,6 +1,5 @@
-/*! github-activity - v0.1.4 - Copyright 2015 Casey Scarborough */
-
 .gha-feed {
+    text-align: left;
     margin: 0px;
     padding: 0px;
     font-family: 'Source Sans Pro', sans-serif;
@@ -16,13 +15,13 @@
 .gha-feed p,
 .gha-feed ul {
     margin: 0;
-    padding: 0
+    padding: 0;
 }
 
 .gha-feed ul {
     list-style-type: none;
     padding: 0;
-    margin: 0
+    margin: 0;
 }
 
 .gha-feed li {
@@ -31,31 +30,31 @@
 }
 
 .gha-feed small {
-    color: #666666;
+    color: #6F6F6F;
     font-weight: 400;
-    font-size: 13px
+    font-size: 13px;
 }
 
 .gha-feed small a {
     color: #2980B9;
-    font-weight: 400
+    font-weight: 400;
 }
 
 .gha-feed small a .more-commits {
     color: #2980B9;
-    font-size: 11px
+    font-size: 11px;
 }
 
 span.gha-time {
-    color: #bbb;
+    color: #6F6F6F;
     font-weight: 400;
-    font-size: 12px
+    font-size: 12px;
 }
 
 .gha-feed a {
     color: #2980B9;
     text-decoration: none;
-    font-weight: 400
+    font-weight: 400;
 }
 
 .gha-feed a:hover {
@@ -65,7 +64,7 @@ span.gha-time {
     -o-transition: color 0.1s linear;
     transition: color 0.1s linear;
     text-decoration: none;
-    color: #FFC82C
+    color: #FFC82C;
 }
 
 .gha-feed pre {
@@ -73,7 +72,7 @@ span.gha-time {
     border: 0;
     border-radius: 0;
     box-shadow: 1px 1px 4px #BBBBBB;
-    color: #FFFFFF
+    color: #FFFFFF;
 }
 
 .gha-header {
@@ -81,10 +80,9 @@ span.gha-time {
     top: 1px;
     left: 1px;
     width: calc(100% - 20px);
-    padding: 10px;
-    height: 67px;
-    border-bottom: 1px solid #ddd;
-    background: #FFFFFF;
+    padding: 14px;
+    height: 50px;
+    border-bottom: 1px solid #DDDDDD;
 }
 
 .gha-footer {
@@ -92,20 +90,20 @@ span.gha-time {
     bottom: -1px;
     left: 1px;
     padding: 5px 5px 5px 10px;
-    border-top: 1px solid #ddd;
     height: 16px;
-    width: calc(100% - 15px);
-    background: #FFFFFF;
-    color: #495961;
-    font-size: 13px
+    width: calc(100% - 15px);;
+    font-size: 13px;
 }
 
 .gha-footer a {
     float: right;
-    color: #495961;
-    padding-right: 20px;
+    color: #444444;
     font-size: 13px;
-    font-weight: 700
+    font-weight: 700;
+}
+
+.gha-footer a:hover {
+    color: inherit;
 }
 
 .gha-github-icon {
@@ -114,71 +112,62 @@ span.gha-time {
     padding: 9px 0 0;
     width: 35px;
     height: 35px;
-    color: #495961
 }
 
 .gha-github-icon .octicon {
-    font: normal normal 40px octicons
-}
-
-.gha-gravatar {
-    display: inline;
-    float: right;
-    margin-right: 10px;
-    padding-right: 20px;
-    max-width: 60px;
-    height: 67px
+    font: normal normal 40px octicons;
 }
 
 .gha-gravatar img {
     padding: 3px;
     width: 100%;
     border: 1px solid #DDDDDD;
-    box-shadow: 1px 1px 3px #ccc
+    box-shadow: 1px 1px 3px #CCCCCC;
 }
 
 .gha-activity {
     clear: both;
     padding: 10px 0;
     width: 100%;
-    border-bottom: 1px solid #ddd
+    border-bottom: 1px solid #DDDDDD;
 }
 
 .gha-activity.gha-small {
     margin-top: 5px;
     font-weight: 400;
-    font-size: 13px
+    font-size: 13px;
 }
 
 .gha-activity.gha-small a {
-    font-weight: 400
+    font-weight: 400;
 }
 
 .gha-activity.gha-small .gha-message {
-    float: left;
     width: auto;
     margin-right: 5px;
-    margin-top: 5px
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .gha-activity.gha-small span {
-    font-size: 16px
+    text-align: center;
+    font-size: 20px;
 }
 
 .gha-activity.gha-small .gha-time {
-    float: left;
-    margin-top: 6px
+    float: right;
+    margin-top: 6px;
 }
 
 .gha-activity:last-child {
-    padding-bottom: 100px
+    padding-bottom: 100px;
 }
 
 .gha-repo {
     clear: both;
     padding: 10px 0;
     width: 100%;
-    border-bottom: 1px solid #ddd
+    border-bottom: 1px solid #DDDDDD;
 }
 
 .gha-activity-icon .octicon {
@@ -188,61 +177,46 @@ span.gha-time {
     margin: 6px auto;
     width: 50px;
     color: #BBBBBB;
-    font: normal normal 30px octicons
+    font: normal normal 30px octicons;
 }
 
 .gha-activity-icon .gha-small {
-    font-size: 16px
+    font-size: 16px;
 }
 
 .gha-message {
     display: inline-block;
-    float: left;
-    width: calc(100% - 50px)
+    width: calc(100% - 50px);
 }
 
 .gha-message-commits {
-    font-size: 11px
+    font-size: 11px;
 }
 
 .gha-message-merge {
     padding: 3px 7px;
     border-radius: 3px;
-    background: #E8F1F6;
-    color: rgba(0, 0, 0, .5);
+    color: rgba(0, 0, 0, 0.5);
     font-size: 12px;
-    line-height: 2
+    line-height: 2;
 }
 
 .gha-sha {
     font-size: 12px;
     font-family: 'Source Code Pro', monospace;
-    float: left;
-}
-
-.gha-gravatar-small {
-    float: left;
-    margin-right: 6px;
-    width: 30px
-    display: none;
 }
 
 .gha-gravatar-commit {
     margin-bottom: -3px;
-    border-radius: 2px
-}
-
-.gha-gravatar-user {
-    float: left
+    border-radius: 2px;
 }
 
 .gha-user-info {
     display: inline-block;
-    float: left;
     margin: 0 auto;
-    padding: 6px 10px 5px;
+    padding: 18px 15px 5px;
     color: #495961;
-    font-size: 20px
+    font-size: 20px;
 }
 
 .gha-user-info a {
@@ -254,12 +228,7 @@ span.gha-time {
 }
 
 .gha-user-info p a {
-    font-weight: 100
-}
-
-.gha-without-name {
-    padding-top: 20px;
-    padding-left: 15px
+    font-weight: 100;
 }
 
 .gha-info {
@@ -267,10 +236,9 @@ span.gha-time {
     padding: 10px;
     border: 1px solid #E8F1F6;
     border-radius: 4px;
-    background: #FFFFDE;
     color: #6D6D4B;
     font-weight: 400;
-    font-size: 13px
+    font-size: 13px;
 }
 
 .gha-time {
@@ -280,7 +248,7 @@ span.gha-time {
 }
 
 .gha-clear {
-    clear: both
+    clear: both;
 }
 
 .gha-muted {
@@ -288,18 +256,14 @@ span.gha-time {
 }
 
 .gha-push {
-    height: 87px
+    height: 77px
 }
 
 .gha-push-small {
-    height: 26px
-}
-
-.gha-commits {
-    float: left;
+    height: 26px;
 }
 
 .gha-commits a {
     color: #2980B9;
-    margin-right: 10px
+    margin-right: 10px;
 }
